# claude-chill

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  update-cargo-hash.yml  vhs-tests.yml
crates/claude-chill/: Cargo.toml  build.rs
crates/claude-chill/src/: bin.rs  cli.rs  config.rs  escape_filter.rs  escape_sequences.rs  history_filter.rs  key_parser.rs  lib.rs  line_buffer.rs  proxy.rs  redraw_throttler.rs  vt_history_tests.rs
crates/claude-chill/src/platform/: mod.rs  unix.rs  windows.rs
tests/: ctrl-b.exp  integration.exp  integration.ps1
tests/vhs/: README.md  basic.tape  ctrl-b.tape  lookback.tape  run-tests.sh
