[package]
name = "claude-chill"
version.workspace = true
edition.workspace = true
authors.workspace = true
default-run = "claude-chill"
description = "PTY proxy that reduces terminal flicker using VT-based rendering"
license = "MIT"
repository = "https://github.com/davidbeesley/claude-chill"

[lib]
name = "claude_chill"
path = "src/lib.rs"

[[bin]]
name = "claude-chill"
path = "src/bin.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
memchr = "2"
nix = { version = "0.30", features = ["term", "signal", "poll", "process", "fs"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
vt100 = { git = "https://github.com/davidbeesley/vt100-rust", rev = "7c960744313136c84218b0b92e5f97f7709a5e85" }
log = "0.4"
env_logger = "0.11"
